force-app/main/default/objects/Account/fields/Account_Age__c.field-meta.xml
<CustomField>
    <fullName>Account_Age__c</fullName>
    <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>