force-app/main/default/objects/Account/fields/Contact_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fetched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Fetched</label>
    <type>Checkbox</type>
</CustomField>