force-app/main/default/objects/Account/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>+30</fullName>
            </value>
            <value>
                <fullName>+33</fullName>
            </value>
            <value>
                <fullName>+39</fullName>
            </value>
            <value>
                <fullName>+44</fullName>
            </value>
            <value>
                <fullName>+45</fullName>
            </value>
            <value>
                <fullName>+46</fullName>
            </value>
            <value>
                <fullName>+47</fullName>
            </value>
            <value>
                <fullName>+49</fullName>
            </value>
            <value>
                <fullName>+61</fullName>
            </value>
            <value>
                <fullName>+64</fullName>
            </value>
            <value>
                <fullName>+65</fullName>
            </value>
            <value>
                <fullName>+7</fullName>
            </value>
            <value>
                <fullName>+852</fullName>
            </value>
            <value>
                <fullName>+86</fullName>
            </value>
            <value>
                <fullName>+91</fullName>
            </value>
            <value>
                <fullName>+971</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>