force-app/main/default/objects/Account/fields/Department_Name_MultiSelect__c.field-meta.xml
<CustomField>
    <fullName>Department_Name_MultiSelect__c</fullName>
    <label>Department Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Mast &amp; Polygonal</fullName>
            </value>
            <value>
                <fullName>Steel Pipes</fullName>
            </value>
            <value>
                <fullName>Crash Barrier</fullName>
            </value>
            <value>
                <fullName>Steel Tubular Poles</fullName>
            </value>
            <value>
                <fullName>Polymer</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>Transmission &amp; Telecom Tower</fullName>
            </value>
            <value>
                <fullName>Pre Engineering Building</fullName>
            </value>
            <value>
                <fullName>Solar Structure</fullName>
            </value>
            <value>
                <fullName>Railway Electrification Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>