force-app/main/default/objects/Account/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tender</label>
    <referenceTo>Tender__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>