force-app/main/default/objects/Account/recordTypes/Dealer_Distributor.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Distributor</fullName>
    <active>true</active>
    <label>Dealer/Distributor</label>
</RecordType>