force-app/main/default/objects/Account/recordTypes/End_Customer.recordType-meta.xml
<RecordType>
    <fullName>End_Customer</fullName>
    <active>true</active>
    <label>End Customer</label>
</RecordType>