force-app/main/default/objects/Account/recordTypes/Government_Entity.recordType-meta.xml
<RecordType>
    <fullName>Government_Entity</fullName>
    <active>true</active>
    <label>Government Entity</label>
</RecordType>