force-app/main/default/objects/Account/validationRules/Name_NOT_special_character_or_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_NOT_special_character_or_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Name, &quot;^[A-Za-z]+( [A-Za-z]+)*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name field can&apos;t be Number and Special Character</errorMessage>
</ValidationRule>