force-app/main/default/objects/Account/validationRules/Valid_GST_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_GST_number</fullName>
    <active>true</active>
    <description>What this enforces
First 2 digits → state code
Next 5 → alphabets (PAN)
Next 4 → digits
Next 1 → alphabet
13th → alphanumeric (entity code)
14th → must be Z
15th → alphanumeric</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(GSTIN__c)),
  NOT(
    REGEX(
      GSTIN__c,
      &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z][1-9A-Z]Z[0-9A-Z]$&quot;
    )
  )
)</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>Please put a valid format</errorMessage>
</ValidationRule>