force-app/main/default/objects/Account/validationRules/Valid_website.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_website</fullName>
    <active>true</active>
    <description>https://example.com
http://example.com
www.example.com
example.com
example.co.in
https://example.com/page

Blocks:
abc
example
http:/wrong.com
example@com</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Website)),
  NOT(
    REGEX(
      Website,
      &quot;^(https?:\\/\\/)?(www\\.)?[a-zA-Z0-9-]+(\\.[a-zA-Z]{2,})+(\\/.*)?$&quot;
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Please put valid website</errorMessage>
</ValidationRule>