force-app/main/default/objects/Account/listViews/All_Dealer_Distributor.listView-meta.xml
<ListView>
    <fullName>All_Dealer_Distributor</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Dealer_Distributor</value>
    </filters>
    <label>All Dealer/Distributor</label>
</ListView>