force-app/main/default/objects/Account/listViews/All_End_Customer.listView-meta.xml
<ListView>
    <fullName>All_End_Customer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.End_Customer</value>
    </filters>
    <label>All End Customer</label>
</ListView>