force-app/main/default/objects/Account/listViews/All_Government_Entity.listView-meta.xml
<ListView>
    <fullName>All_Government_Entity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Government_Entity</value>
    </filters>
    <label>All Government Entity</label>
</ListView>