force-app/main/default/objects/Account/listViews/Department.listView-meta.xml
<ListView>
    <fullName>Department</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Pre Engineering Buildings Products</value>
    </filters>
    <label>Dept - Pre Engineering Buildings Product</label>
</ListView>