force-app/main/default/objects/Account/listViews/Department_Steel_Pipes_Products.listView-meta.xml
<ListView>
    <fullName>Department_Steel_Pipes_Products</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Steel Pipes Products</value>
    </filters>
    <label>Department - Steel Pipes Products</label>
</ListView>